tests/paczka1/small_fuzzy/67458506.err
Error in line 3: S367 S367 47,4
Error in line 7: S367 S440 47,4
Error in line 4: EhmN S440 23,1
